RESOLVED FIXED55141
FETurbulenceElement changes doesn't require relayout.
https://bugs.webkit.org/show_bug.cgi?id=55141
Summary FETurbulenceElement changes doesn't require relayout.
Renata Hodovan
Reported 2011-02-24 06:48:57 PST
FETurbulenceElement changes doesn't require relayout.
Attachments
Proposed patch (10.13 KB, patch)
2011-02-25 04:34 PST, Renata Hodovan
zimmermann: review+
Proposed patch (10.24 KB, patch)
2011-02-25 06:24 PST, Renata Hodovan
kling: review+
kling: commit-queue-
Renata Hodovan
Comment 1 2011-02-25 04:34:27 PST
Created attachment 83795 [details] Proposed patch
Build Bot
Comment 2 2011-02-25 04:58:50 PST
Nikolas Zimmermann
Comment 3 2011-02-25 05:01:59 PST
Comment on attachment 83795 [details] Proposed patch r=me.
Andreas Kling
Comment 4 2011-02-25 05:46:51 PST
Comment on attachment 83795 [details] Proposed patch View in context: https://bugs.webkit.org/attachment.cgi?id=83795&action=review > Source/WebCore/platform/graphics/filters/FETurbulence.cpp:128 > + if (m_numOctaves == numOctaves) > + return false; m_numOctaves is int, this should be fixed before landing this (as this will break Windows judging by EWS.)
Renata Hodovan
Comment 5 2011-02-25 05:49:09 PST
(In reply to comment #4) > (From update of attachment 83795 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=83795&action=review > > > Source/WebCore/platform/graphics/filters/FETurbulence.cpp:128 > > + if (m_numOctaves == numOctaves) > > + return false; > > m_numOctaves is int, this should be fixed before landing this (as this will break Windows judging by EWS.) Yeah, i see it already and supplement the patch immediately.
Renata Hodovan
Comment 6 2011-02-25 06:24:09 PST
Created attachment 83799 [details] Proposed patch Fix the parameter type of FETurbulence::setNumOctaves which caused the broken WIN bot.
Andreas Kling
Comment 7 2011-02-28 03:11:35 PST
Comment on attachment 83799 [details] Proposed patch View in context: https://bugs.webkit.org/attachment.cgi?id=83799&action=review r=me, but please update the symbols in Source/WebCore/WebCore.order wrt TurbulanceType/TurbulenceType as well. > Source/WebCore/ChangeLog:13 > + No new tests are needed because this modificiation is covered by the dynamic update tests of FETurbulence. Typo, modification.
Renata Hodovan
Comment 8 2011-02-28 03:31:29 PST
Note You need to log in before you can comment on or make changes to this bug.