2011-02-28  Renata Hodovan  <reni@webkit.org>

Reviewed by Andreas Kling.

        FETurbulenceElement changes doesn't require relayout
        https://bugs.webkit.org/show_bug.cgi?id=55141

        When the FETurbulenceElement receives an update message but the given value remains the same we don't need
        to relayout the filter.
        Besides fix a typo in FETurbulence and change the paramterer type of FETurbulence::setNumOctaves from bool
        to int according to the spec.

        No new tests are needed because this modification is covered by the dynamic update tests of FETurbulence.

        * platform/graphics/filters/FETurbulence.cpp:
        (WebCore::FETurbulence::FETurbulence):
        (WebCore::FETurbulence::create):
        (WebCore::FETurbulence::type):
        (WebCore::FETurbulence::setType):
        (WebCore::FETurbulence::setBaseFrequencyY):
        (WebCore::FETurbulence::setBaseFrequencyX):
        (WebCore::FETurbulence::setSeed):
        (WebCore::FETurbulence::setNumOctaves):
        (WebCore::FETurbulence::setStitchTiles):
        (WebCore::operator<<):
        * platform/graphics/filters/FETurbulence.h:
        * svg/SVGFETurbulenceElement.cpp:
        (WebCore::SVGFETurbulenceElement::setFilterEffectAttribute):
        (WebCore::SVGFETurbulenceElement::svgAttributeChanged):
        (WebCore::SVGFETurbulenceElement::build):
        * svg/SVGFETurbulenceElement.h:


Canonical link: https://commits.webkit.org/69768@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@79851 268f45cc-cd09-0410-ab3c-d52691b4dbfc